--- a/UFS-DC-Chef-CRM-App/Src/In-Call Sampling Screen.fx.yaml
+++ b/UFS-DC-Chef-CRM-App/Src/In-Call Sampling Screen.fx.yaml
@@ -2088,10 +2088,10 @@
                                                     First(
                                                         Split(
                                                             Last(
-                                                                Split(
+                                                                FirstN(Split(
                                                                     Gbl_CurrentCustomer.'Created On',
                                                                     " "
-                                                                )
+                                                                ),2)
                                                             ).Value,
                                                             ":"
                                                         )
@@ -2101,10 +2101,10 @@
                                                     First(
                                                         Split(
                                                             Last(
-                                                                Split(
+                                                                FirstN(Split(
                                                                     Gbl_CurrentCustomer.'Created On',
                                                                     " "
-                                                                )
+                                                                ),2)
                                                             ).Value,
                                                             ":"
                                                         )
@@ -2112,20 +2112,20 @@
                                                 ) - 12 & ":" & Last(
                                                     Split(
                                                         Last(
-                                                            Split(
-                                                                Gbl_CurrentCustomer.'Created On',
-                                                                " "
-                                                            )
-                                                        ).Value,
+                                                                FirstN(Split(
+                                                                    Gbl_CurrentCustomer.'Created On',
+                                                                    " "
+                                                                ),2)
+                                                            ).Value,
                                                         ":"
                                                     )
                                                 ).Value & " PM",
                                                 Last(
-                                                    Split(
-                                                        Gbl_CurrentCustomer.'Created On',
-                                                        " "
-                                                    )
-                                                ).Value & " AM"
+                                                                FirstN(Split(
+                                                                    Gbl_CurrentCustomer.'Created On',
+                                                                    " "
+                                                                ),2)
+                                                            ).Value & " AM"
                                             )
                                         Width: =Parent.Width-10
                                         ZIndex: =3
