--- a/UFS-DC-Chef-CRM-App/Src/Menu Matrix Offline Screen.fx.yaml
+++ b/UFS-DC-Chef-CRM-App/Src/Menu Matrix Offline Screen.fx.yaml
@@ -153,7 +153,6 @@
                     LayoutMinHeight: =100
                     LayoutMinWidth: =250
                     LayoutMode: =LayoutMode.Auto
-                    PaddingTop: =10
                     Visible: =gblLastScreen = "FromInCallSample_ToMenuMatrix" 
                     Width: |-
                         =135
@@ -292,7 +291,7 @@
                         LayoutMinWidth: =0
                         LoadingSpinner: =LoadingSpinner.Data
                         TemplatePadding: =6
-                        TemplateSize: =100
+                        TemplateSize: =Parent.Height/7-10
                         Width: =Parent.Width
                         ZIndex: =2
 
@@ -422,10 +421,10 @@
                                 Fill: |-
                                     =//If(ThisItem.IsSelected,RGBA(189,195,191,0.5),
                                         RGBA(0,0,0,0)
-                                Height: =30
+                                Height: =Self.Width
                                 HoverFill: =RGBA(0,0,0,0)
                                 Icon: =If(ThisItem.Value="Customer & Contact",Icon.People,ThisItem.Value="Menu Matrix",Icon.Items,ThisItem.Value="Rich Media",Icon.Camera,ThisItem.Value="Call Objective",Icon.Phone,ThisItem.Value="Sampling",Icon.Phonebook,ThisItem.Value="Cart",Icon.ShoppingCart,ThisItem.Value="Call Summary",Icon.DocumentWithContent)
-                                Width: =30
+                                Width: =If('Menu Matrix Offline Screen'.Size<3,25,30)
                                 ZIndex: =1
 
                             Gal_Button_10 As button:
@@ -553,7 +552,7 @@
                                 RadiusBottomRight: =30
                                 RadiusTopLeft: =30
                                 RadiusTopRight: =30
-                                Size: =If('In-Call Sampling Screen'.Size>3 || 'In Call Screen'.Size>3 ,11,8)
+                                Size: =If('Menu Matrix Offline Screen'.Size>3 ,12,10)
                                 Text: =ThisItem.Value
                                 Width: =Parent.Width -5
                                 ZIndex: =2
