--- a/UFS-DC-Chef-CRM-App/Src/CustomerContactScreen.fx.yaml
+++ b/UFS-DC-Chef-CRM-App/Src/CustomerContactScreen.fx.yaml
@@ -20990,7 +20990,7 @@
                                                             PressedColor: =RGBA(255, 255, 255, 1)
                                                             PressedFill: =RGBA(0, 0, 0, 0)
                                                             SearchFields: =["ulchef_name"]
-                                                            SearchItems: =[]
+                                                            SearchItems: =Search(Contacts,'Primary Contact ComboBox_7'.SearchText,"ulchef_name")
                                                             SelectionFill: =RGBA(139, 154, 159, 1)
                                                             SelectMultiple: =false
                                                             Size: =10
