--- a/UFS-DC-Chef-CRM-App/Src/Rich Media Offline Screen.fx.yaml
+++ b/UFS-DC-Chef-CRM-App/Src/Rich Media Offline Screen.fx.yaml
@@ -430,7 +430,7 @@
                                 Height: =Self.Width
                                 HoverFill: =RGBA(0,0,0,0)
                                 Icon: =If(ThisItem.Value="Customer & Contact",Icon.People,ThisItem.Value="Menu Matrix",Icon.Items,ThisItem.Value="Rich Media",Icon.Camera,ThisItem.Value="Call Objective",Icon.Phone,ThisItem.Value="Sampling",Icon.Phonebook,ThisItem.Value="Cart",Icon.ShoppingCart,ThisItem.Value="Call Summary",Icon.DocumentWithContent)
-                                Width: =If('Rich Media Offline Screen'.Size>3, 30,25) 
+                                Width: =If('Rich Media Offline Screen'.Size>3, 25,20) 
                                 ZIndex: =1
 
                             Gal_Button_8 As button:
@@ -449,10 +449,7 @@
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Bold, FontWeight.Bold)
                                 Height: =(Parent.Height)-60
                                 HoverColor: =If(_V_SelectedHeaderOptionInCall = Self.Text,Color.Orange,Color.White) 
-                                HoverFill: |-
-                                    =//If(_V_SelectedHeaderOptionInCall = Self.Text,RGBA(189,195,191,0.5),RGBA(255,255,255,1))
-                                    //RGBA(0,0,0,0)
-                                    RGBA(189,195,191,0.5)
+                                HoverFill: =RGBA(189, 195, 191, 0)
                                 LayoutMinWidth: =0
                                 OnSelect: |-
                                     =/*Set(Gbl_selectedCutomerFromInCall,Gbl_CurrentCustomer);
@@ -556,6 +553,8 @@
                                     ))
                                 PaddingLeft: =10
                                 PaddingRight: =10
+                                PressedColor: =Color.White
+                                PressedFill: =
                                 RadiusBottomLeft: =30
                                 RadiusBottomRight: =30
                                 RadiusTopLeft: =30
@@ -564,48 +563,6 @@
                                 Text: =ThisItem.Value
                                 Width: =Parent.Width -5
                                 ZIndex: =2
-
-                            Indicator_Button_8 As button:
-                                AlignInContainer: =AlignInContainer.Stretch
-                                BorderStyle: =BorderStyle.None
-                                BorderThickness: =0
-                                DisabledBorderColor: =RGBA(166, 166, 166, 1)
-                                DisabledColor: =RGBA(166, 166, 166, 1)
-                                DisabledFill: =RGBA(244, 244, 244, 1)
-                                Fill: =RGBA(50, 45, 51, 1)
-                                FillPortions: =1
-                                FontWeight: =FontWeight.Semibold
-                                Height: =((Parent.Height)/8-7)/2
-                                HoverColor: =RGBA(255, 255, 255, 1)
-                                HoverFill: =RGBA(0,0,0,0)
-                                LayoutMinWidth: =0
-                                OnSelect: =Gal_Button_8.Pressed
-                                Size: =12
-                                Text: =
-                                Visible: |-
-                                    =//_V_SelectedHeaderOptionInCall = ThisItem.Value
-                                    false
-                                Width: =7
-                                X: =5
-                                Y: =(Gal_Button_8.Height-Self.Height)/2
-                                ZIndex: =3
-
-                            Label10_11 As label:
-                                AlignInContainer: =AlignInContainer.Stretch
-                                BorderColor: =RGBA(131, 24, 75, 1)
-                                Color: =RGBA(0, 0, 0, 1)
-                                DisabledColor: =RGBA(166, 166, 166, 1)
-                                FillPortions: =1
-                                Height: =10
-                                HoverFill: =RGBA(0,0,0,0)
-                                LayoutMinWidth: =0
-                                OnSelect: =//Select(Parent)
-                                Size: =13
-                                Text: =
-                                Visible: =false
-                                Width: =117.77000000000001
-                                Y: =60
-                                ZIndex: =4
 
                 "'Side Bar Component_12' As 'Side Bar Component'":
                     Height: =Parent.Height
