--- a/UFS-DC-Chef-CRM-App/Src/Email Screen.fx.yaml
+++ b/UFS-DC-Chef-CRM-App/Src/Email Screen.fx.yaml
@@ -201,7 +201,7 @@
                                     DisabledBorderColor: =RGBA(166, 166, 166, 1)
                                     DisabledColor: =RGBA(166, 166, 166, 1)
                                     DisabledFill: =RGBA(244, 244, 244, 1)
-                                    DisplayFields: =["ulchef_name"]
+                                    DisplayFields: =["cr86f_loggeduser"]
                                     Height: =Parent.Height-8
                                     HoverColor: =RGBA(0, 0, 0, 1)
                                     HoverFill: =RGBA(255, 211, 205, 1)
@@ -213,8 +213,10 @@
                                     PressedColor: =RGBA(255, 255, 255, 1)
                                     PressedFill: =RGBA(131, 24, 75, 1)
                                     Reset: =true
-                                    SearchFields: =["ulchef_name"]
-                                    SearchItems: =[]
+                                    SearchFields: =["cr86f_loggeduser"]
+                                    SearchItems: |-
+                                        =Search(//Filter(_C_All_Incalls,'Call Status'="Completed")
+                                        _C_All_Incalls,ComboBox6_2.SearchText,"cr86f_loggeduser")
                                     SelectionFill: =RGBA(211, 66, 9, 1)
                                     SelectMultiple: =false
                                     Size: =13
