--- a/UFS-DC-Chef-CRM-App/Src/Email Screen.fx.yaml
+++ b/UFS-DC-Chef-CRM-App/Src/Email Screen.fx.yaml
@@ -214,9 +214,7 @@
                                     PressedFill: =RGBA(131, 24, 75, 1)
                                     Reset: =true
                                     SearchFields: =["cr86f_loggeduser"]
-                                    SearchItems: |-
-                                        =Search(//Filter(_C_All_Incalls,'Call Status'="Completed")
-                                        _C_All_Incalls,ComboBox6_2.SearchText,"cr86f_loggeduser")
+                                    SearchItems: =[]
                                     SelectionFill: =RGBA(211, 66, 9, 1)
                                     SelectMultiple: =false
                                     Size: =13
