--- a/UFS-DC-Chef-CRM-App/Src/In-Call Sampling Screen.fx.yaml
+++ b/UFS-DC-Chef-CRM-App/Src/In-Call Sampling Screen.fx.yaml
@@ -460,6 +460,7 @@
             LoadingSpinner: =LoadingSpinner.Data
             TemplatePadding: =0
             TemplateSize: =130
+            Visible: =!Cutomer_preview
             Width: =Parent.Width
             ZIndex: =11
 
@@ -800,6 +801,7 @@
             PaddingLeft: =20
             PaddingRight: =20
             PaddingTop: =3
+            Visible: =!Cutomer_preview
             ZIndex: =12
 
             Label17_21 As label:
@@ -2450,10 +2452,7 @@
                                                 PressedColor: =RGBA(255, 255, 255, 1)
                                                 PressedFill: =RGBA(131, 24, 75, 1)
                                                 SearchFields: =["Value"]
-                                                SearchItems: |-
-                                                    =Search(//["2020", "2021", "2022", "2023", "2024", "2025", "2026", "2027", "2028", "2029", "2030", "2031", "2032", "2033", "2034", "2035", "2036", "2037", "2038", "2039", "2040" ]
-                                                    Distinct(_Col_SKUForInCalls,Text('Created On',"yyyy"))
-                                                    ,ComboBox5_1.SearchText,"Value")
+                                                SearchItems: =[]
                                                 SelectionFill: =RGBA(211, 66, 9, 1)
                                                 Size: =If('In-Call Sampling Screen'.Size >3,10,6)
                                                 Width: =128
@@ -3846,7 +3845,7 @@
                                             PressedColor: =RGBA(255, 255, 255, 1)
                                             PressedFill: =RGBA(106, 122, 127, 1)
                                             SearchFields: =["Value"]
-                                            SearchItems: =Choices(CallType_Incall,ComboBox3_13.SearchText)
+                                            SearchItems: =[]
                                             SelectionFill: =RGBA(255, 255, 255, 1)
                                             SelectMultiple: =false
                                             Size: =10
@@ -7489,7 +7488,9 @@
                                             LayoutMinWidth: =95
                                             OnSelect: |-
                                                 =UpdateContext({V_PreviewCallSummary: true});
-                                                Set(
+                                                Set(Var_verify,true);
+                                                
+                                                /*Set(
                                                     Gbl_PreviewContent,
                                                     PDF(
                                                         MainPreview_Container,
@@ -8039,8 +8040,187 @@
             Icon: =Icon.CancelBadge
             OnSelect: |-
                 =UpdateContext({V_PreviewCallSummary: false});
+                UpdateContext({Var_pdfVisible: false});
+            Visible: =Var_pdfVisible
             Width: =40
             ZIndex: =1
+
+        Container11 As groupContainer.verticalAutoLayoutContainer:
+            FillPortions: =0
+            Height: =Parent.Height
+            LayoutAlignItems: =LayoutAlignItems.Center
+            LayoutDirection: =LayoutDirection.Vertical
+            LayoutJustifyContent: =LayoutJustifyContent.Center
+            LayoutMinHeight: =100
+            LayoutMinWidth: =250
+            LayoutMode: =LayoutMode.Auto
+            Visible: =!Var_verify&&!Var_pdfVisible
+            ZIndex: =2
+
+            Container7_1 As groupContainer.verticalAutoLayoutContainer:
+                AlignInContainer: =AlignInContainer.SetByContainer
+                DropShadow: =DropShadow.Regular
+                FillPortions: =0
+                Height: =Parent.Height/3
+                LayoutAlignItems: =LayoutAlignItems.Center
+                LayoutDirection: =LayoutDirection.Vertical
+                LayoutJustifyContent: =LayoutJustifyContent.Center
+                LayoutMinHeight: =100
+                LayoutMinWidth: =50
+                LayoutMode: =LayoutMode.Auto
+                RadiusBottomLeft: =4
+                RadiusBottomRight: =4
+                RadiusTopLeft: =4
+                RadiusTopRight: =4
+                Visible: =!Var_loadingpop
+                Width: =Parent.Width/3
+                ZIndex: =1
+
+                Label3_1 As label:
+                    Align: =Align.Center
+                    BorderColor: =RGBA(131, 24, 75, 1)
+                    Color: =RGBA(0, 0, 0, 1)
+                    DisabledColor: =RGBA(166, 166, 166, 1)
+                    FillPortions: =1
+                    FontWeight: =FontWeight.Semibold
+                    Size: =18
+                    Text: ="Do you want to preview for"
+                    Width: =Parent.Width
+                    ZIndex: =1
+
+                Container8_2 As groupContainer.horizontalAutoLayoutContainer:
+                    AlignInContainer: =AlignInContainer.SetByContainer
+                    FillPortions: =0
+                    Height: =70
+                    LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
+                    LayoutMinHeight: =100
+                    LayoutMinWidth: =250
+                    LayoutMode: =LayoutMode.Auto
+                    PaddingLeft: =30
+                    PaddingRight: =30
+                    PaddingTop: =5
+                    Width: =Parent.Width
+                    ZIndex: =4
+
+                    Button3 As button:
+                        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                        DisabledColor: =RGBA(166, 166, 166, 1)
+                        DisabledFill: =RGBA(244, 244, 244, 1)
+                        Fill: =RGBA(211, 66, 9, 1)
+                        FontWeight: =FontWeight.Semibold
+                        HoverColor: =RGBA(255, 255, 255, 1)
+                        HoverFill: =ColorFade(RGBA(211, 66, 9, 1), -20%)
+                        OnSelect: |-
+                            =
+                            UpdateContext({Var_loadingpop:true});
+                            
+                            UpdateContext({Cutomer_preview:true});
+                            
+                            
+                            
+                            
+                            Set(
+                                Gbl_PreviewContent,
+                                PDF(
+                                    MainPreview_Container,
+                                    {
+                                        ExpandContainers: true,
+                                        Orientation: PaperOrientation.Portrait,
+                                        Size: PaperSize.A4,
+                                        DPI: 150
+                                    }
+                                )
+                            );
+                            
+                            UpdateContext({Var_loadingpop:false});
+                            UpdateContext({Var_verify:false});
+                            UpdateContext({Var_pdfVisible:true});
+                            
+                            //UpdateContext({V_PreviewCallSummary: true});
+                        Size: =15
+                        Text: ="Customer"
+                        Width: =130
+                        ZIndex: =1
+
+                    Button3_1 As button:
+                        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                        DisabledColor: =RGBA(166, 166, 166, 1)
+                        DisabledFill: =RGBA(244, 244, 244, 1)
+                        Fill: =RGBA(211, 66, 9, 1)
+                        FontWeight: =FontWeight.Semibold
+                        HoverColor: =RGBA(255, 255, 255, 1)
+                        HoverFill: =ColorFade(RGBA(211, 66, 9, 1), -20%)
+                        OnSelect: |-
+                            =UpdateContext({Var_loadingpop:true});
+                            
+                            UpdateContext({Cutomer_preview:false});
+                            
+                            
+                            
+                            
+                            Set(
+                                Gbl_PreviewContent,
+                                PDF(
+                                    MainPreview_Container,
+                                    {
+                                        ExpandContainers: true,
+                                        Orientation: PaperOrientation.Portrait,
+                                        Size: PaperSize.A4,
+                                        DPI: 150
+                                    }
+                                )
+                            );
+                            
+                            UpdateContext({Var_loadingpop:false});
+                            UpdateContext({Var_verify:false});
+                            UpdateContext({Var_pdfVisible:true});
+                        Size: =15
+                        Text: ="User"
+                        Width: =130
+                        ZIndex: =2
+
+            Container7_2 As groupContainer.verticalAutoLayoutContainer:
+                AlignInContainer: =AlignInContainer.SetByContainer
+                DropShadow: =DropShadow.Regular
+                FillPortions: =0
+                Height: =Parent.Height/3
+                LayoutAlignItems: =LayoutAlignItems.Center
+                LayoutDirection: =LayoutDirection.Vertical
+                LayoutJustifyContent: =LayoutJustifyContent.Center
+                LayoutMinHeight: =100
+                LayoutMinWidth: =50
+                LayoutMode: =LayoutMode.Auto
+                RadiusBottomLeft: =4
+                RadiusBottomRight: =4
+                RadiusTopLeft: =4
+                RadiusTopRight: =4
+                Visible: =Var_loadingpop
+                Width: =Parent.Width/3
+                ZIndex: =2
+
+                Spinner2 As Spinner:
+                    BasePaletteColor: =
+                    DisplayMode: =DisplayMode.Edit
+                    FontColor: =
+                    Height: =200
+                    LayoutMinHeight: =200
+                    LayoutMinWidth: =200
+                    Width: =200
+                    X: =0
+                    Y: =0
+                    ZIndex: =1
+
+                Label3_3 As label:
+                    Align: =Align.Center
+                    BorderColor: =RGBA(131, 24, 75, 1)
+                    Color: =RGBA(0, 0, 0, 1)
+                    DisabledColor: =RGBA(166, 166, 166, 1)
+                    FillPortions: =1
+                    FontWeight: =FontWeight.Semibold
+                    Size: =18
+                    Text: ="Loading"
+                    Width: =Parent.Width
+                    ZIndex: =2
 
         Button1 As button:
             DisabledBorderColor: =RGBA(166, 166, 166, 1)
@@ -8050,9 +8230,9 @@
             FontWeight: =FontWeight.Semibold
             HoverColor: =RGBA(255, 255, 255, 1)
             HoverFill: =ColorFade(RGBA(211, 66, 9, 1), -20%)
-            OnSelect: |-
+            OnSelect: |
                 =Office365Outlook.SendEmailV2(
-                    User().Email,
+                    "SujoySoren@Sigilotech.com",
                     "Call Summary",
                     "Here is the PDF of call summary",
                     {
@@ -8073,18 +8253,22 @@
                         )
                     }
                 );
+                
+                Notify("Email send successfully",NotificationType.Success);
                 UpdateContext({V_PreviewCallSummary: false});
+                UpdateContext({Var_pdfVisible: false});
             Size: =15
             Text: ="Send"
+            Visible: =Var_pdfVisible
             Width: =140
-            ZIndex: =2
+            ZIndex: =3
 
     PdfViewer4 As pdfViewer:
         BorderColor: =RGBA(89, 96, 99, 1)
         BorderThickness: =2
         Document: =Gbl_PreviewContent
         Height: =Parent.Height - 100
-        Visible: =V_PreviewCallSummary
+        Visible: =Var_pdfVisible
         Width: =Parent.Width - 40
         X: =20
         Y: =50
